--- a/src/alpha/plugCubed.css
+++ b/src/alpha/plugCubed.css
@@ -1,5 +1,4 @@
 @charset "utf-8";
-
 #plugcubed-gui {
     position: absolute;
     margin-left: -522px;
@@ -208,11 +207,11 @@
 
 .cube-wrap {
     -webkit-perspective: none;
-        -ms-perspective: none;
-            perspective: none;
+    -ms-perspective: none;
+    perspective: none;
     -webkit-perspective-origin: 0 0;
-        -ms-perspective-origin: 0 0;
-            perspective-origin: 0 0;
+    -ms-perspective-origin: 0 0;
+    perspective-origin: 0 0;
 }
 
 #plugcubed {
@@ -228,10 +227,14 @@
     border-right: 1px solid #0A0A0A;
 }
 
+#chat .badge-box .icon.icon-plugcubed {
+    background-image: url('https://plugcubed.net/scripts/alpha/images/menu_logo.png') !important;
+}
+
 .icon.icon-plugcubed {
     left: 4px;
     top: 11px;
-    background-image: url('https://plugcubed.net/scripts/alpha/images/menu_logo.png');
+    background-image: url('https://plugcubed.net/scripts/alpha/images/menu_logo.png') !important;
     -webkit-transform: translateZ(19px);
     -ms-transform: translateZ(19px);
     transform: translateZ(19px);
@@ -250,11 +253,11 @@
 
 #plugcubed .icon.icon-plugcubed.other {
     -webkit-transform: rotateY(-270deg) translateX(19px);
-        -ms-transform: rotateY(-270deg) translateX(19px);
-            transform: rotateY(-270deg) translateX(19px);
+    -ms-transform: rotateY(-270deg) translateX(19px);
+    transform: rotateY(-270deg) translateX(19px);
     -webkit-transform-origin: top right;
-        -ms-transform-origin: top right;
-            transform-origin: top right;
+    -ms-transform-origin: top right;
+    transform-origin: top right;
 }
 
 #user-lists .list.room .user .icon-meh {
@@ -278,6 +281,7 @@
     height: auto;
     width: 2px;
 }
+
 #p3-settings,
 #p3-settings-custom-colors {
     position: absolute;
@@ -549,9 +553,67 @@
     background: #1c1f25;
 }
 
+#p3-control-panel .p3-header:first-child {
+    margin: 0 0 8px;
+}
+
+#p3-control-panel .p3-header {
+    box-shadow: inset 0 1px 0 0 #555D70;
+    -moz-box-shadow: inset 0 1px 0 0 #555D70;
+    -webkit-box-shadow: inset 0 1px 0 0 #555D70;
+    margin: 35px 0 8px;
+    height: 21px;
+    width: 100%;
+}
+
+#p3-control-panel .p3-header span {
+    position: relative;
+    text-transform: uppercase;
+    top: 4px;
+    color: #555D70;
+    font-weight: 400;
+}
+
+#p3-control-panel .p3-item i {
+    display: none;
+}
+
+#p3-control-panel .p3-item span {
+    margin-left: 25px;
+}
+
 #p3-settings .container .item.selected i,
+#p3-control-panel .p3-item.selected i,
 #p3-settings-custom-colors .container .item.selected i {
     display: block;
+}
+
+#p3-control-panel-current .p3-control-left,
+#p3-control-panel-current .p3-control-right {
+    position: relative;
+    width: 50%;
+}
+
+#p3-control-panel-current .p3-control-left {
+    float: left;
+}
+
+#p3-control-panel-current .p3-control-right {
+    float: right;
+}
+
+#p3-control-panel-current .p3-textarea {
+    min-height: 300px;
+    max-height: 500px;
+    color: #eee;
+    background: rgb(40, 44, 53);
+    width: 100%;
+    font-family: monospace;
+    margin-left: 0;
+    margin-bottom: 28px;
+    text-align: left;
+    resize: none;
+    font-size: 12px;
 }
 
 .chat-header-button {
@@ -684,63 +746,60 @@
     width: 16px;
 }
 
-
 .icon.icon-chat-p3developer,
 #user-rollover .meta.has-p3Role.is-p3developer .p3Role {
     background-image: url('https://plugcubed.net/scripts/alpha/images/ranks/p3dev.png') !important;
-    background-position: 0,0;
+    background-position: 0, 0;
 }
 
 .icon.icon-chat-p3sponsor,
 #user-rollover .meta.has-p3Role.is-p3sponsor .p3Role {
     background-image: url('https://plugcubed.net/scripts/alpha/images/ranks/p3sponsor.png') !important;
-    background-position: 0,0;
+    background-position: 0, 0;
 }
 
 .icon.icon-chat-p3ambassador,
 #user-rollover .meta.has-p3Role.is-p3ambassador .p3Role {
     background-image: url('https://plugcubed.net/scripts/alpha/images/ranks/p3ambassador.png') !important;
-    background-position: 0,0;
+    background-position: 0, 0;
 }
 
 .icon.icon-chat-p3donatorDiamond,
 #user-rollover .meta.has-p3Role.is-p3donatorDiamond .p3Role {
     background-image: url('https://plugcubed.net/scripts/alpha/images/ranks/p3donator.diamond.png') !important;
-    background-position: 0,0;
+    background-position: 0, 0;
 }
 
 .icon.icon-chat-p3donatorPlatinum,
 #user-rollover .meta.has-p3Role.is-p3donatorPlatinum .p3Role {
     background-image: url('https://plugcubed.net/scripts/alpha/images/ranks/p3donator.platinum.png') !important;
-    background-position: 0,0;
+    background-position: 0, 0;
 }
 
 .icon.icon-chat-p3donatorGold,
 #user-rollover .meta.has-p3Role.is-p3donatorGold .p3Role {
     background-image: url('https://plugcubed.net/scripts/alpha/images/ranks/p3donator.gold.png') !important;
-    background-position: 0,0;
+    background-position: 0, 0;
 }
 
 .icon.icon-chat-p3donatorSilver,
 #user-rollover .meta.has-p3Role.is-p3donatorSilver .p3Role {
     background-image: url('https://plugcubed.net/scripts/alpha/images/ranks/p3donator.silver.png') !important;
-    background-position: 0,0;
+    background-position: 0, 0;
 }
 
 .icon.icon-chat-p3donatorBronze,
 #user-rollover .meta.has-p3Role.is-p3donatorBronze .p3Role {
     background-image: url('https://plugcubed.net/scripts/alpha/images/ranks/p3donator.bronze.png') !important;
-    background-position: 0,0;
+    background-position: 0, 0;
 }
 
 .is-p3developer .bdg,
 .is-p3ambassador .bdg {
     background-size: cover !important;
     background-position: 0 0;
-    top: 2px;
-    left: 3px;
-    height: 26px;
-    width: 26px;
+    height: 30px;
+    width: 30px;
 }
 
 .is-p3developer .bdg {
@@ -759,13 +818,15 @@
 
 #chat .is-p3developer .un,
 #user-lists .user > .icon.icon-chat-p3developer + .name,
-#user-rollover .meta.is-p3developer .p3Role {
+#user-rollover .meta.is-p3developer .p3Role,
+#user-rollover .meta.is-p3developer .username {
     color: #17B7EF !important;
 }
 
 #chat .is-p3ambassador .un,
 #user-lists .user > .icon.icon-chat-p3ambassador + .name,
-#user-rollover .meta.is-p3ambassador .p3Role {
+#user-rollover .meta.is-p3ambassador .p3Role,
+#user-rollover .meta.is-p3ambassador .username {
     color: #FFC926 !important;
 }
 
@@ -789,7 +850,7 @@
 #p3-control-panel {
     position: absolute;
     background: rgba(17, 19, 23, 0.9);
-    bottom: 45px;
+    top: 54px;
     left: 0;
     overflow: hidden;
 }
@@ -875,8 +936,14 @@
     text-align: center;
     vertical-align: middle;
     padding: 10px;
-    border-radius: 5px;
     cursor: pointer;
+}
+
+#p3-control-panel .p3-item {
+    margin-top: 15px;
+    cursor: pointer;
+    width: auto;
+    height: 15px;
 }
 
 #p3-control-panel .button.submit {
@@ -919,6 +986,7 @@
 #chat .cm:hover .delete-button {
     display: block;
 }
+
 #chat .plugcubed-deleted .delete-button {
     display: none !important;
 }
@@ -926,6 +994,7 @@
 #user-rollover .meta {
     height: 126px;
 }
+
 #user-rollover .meta.has-p3Role .p3Role {
     display: block;
     position: absolute;
@@ -939,6 +1008,7 @@
     background-repeat: no-repeat;
     padding-left: 18px;
 }
+
 #user-rollover .meta .joined {
     top: 61px;
 }
@@ -956,14 +1026,17 @@
     margin-left: 5px;
     font-size: 10px;
 }
+
 .p3-user-info {
     color: #5c5c5c;
     margin-left: 5px;
     font-size: 10px;
 }
+
 .p3-user-info strong {
-    color:#a5a5a5;
+    color: #a5a5a5;
 }
+
 .p3VoteIcon {
     right: 0;
 }
