Added volume change on scroll and change room socket functionality.
:star: Yay, my first commit :star:

--- a/src/alpha/plugCubed.css
+++ b/src/alpha/plugCubed.css
@@ -1044,6 +1044,10 @@
     text-decoration: line-through;
 }
 
+.p3-emote {
+    height: 100%;
+}
+
 blockquote.p3-blockquote {
     border-radius: 3px;
     border-left: 3px solid #3D3D3D;
